ORF-GUI met splash screen
bug bij visualisatie van sequentie lijn zodra hij in een Jscrollpane geplaatst word