@@ -1,75 +1,55 @@
 package ORFF_GUI;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
+
+import java.io.*;
 import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 // try -Xms512M -Xmx512M in VM options
+
+/**
+ * ORFFinder reads through a textfile (assumed format: nucleotide FASTA) to find ORFS
+ */
 public class ORFFinder {
 
-
     static String filename_RELATIVE_TEMP = "data/DNA.txt";
+    private final ArrayList<Sequence> sequences = new ArrayList<Sequence>(100);
 
     /**
      * constructor
      */
     public ORFFinder() {
-        read(new File(filename_RELATIVE_TEMP));
+
 
     }
+
 
     /**
      * main (for testing...)
      */
     public static void main(String[] args) {
-        new ORFFinder();
+        // test ORFFinder
+
+        ORFFinder orfFinder = new ORFFinder();
+        // read the default input
+        orfFinder.readAndFindORFs();
+
+        orfFinder.seeDNA();
+
     }
 
     /**
-     * ASCII TABLE
-     * Dec  Char                           Dec  Char     Dec  Char     Dec  Char
-     * ---------                           ---------     ---------     ----------
-     *   0  NUL (null)                      32  SPACE     64  @         96  `
-     *   1  SOH (start of heading)          33  !         65  A         97  a
-     *   2  STX (start of text)             34  "         66  B         98  b
-     *   3  ETX (end of text)               35  #         67  C         99  c
-     *   4  EOT (end of transmission)       36  $         68  D        100  d
-     *   5  ENQ (enquiry)                   37  %         69  E        101  e
-     *   6  ACK (acknowledge)               38  &         70  F        102  f
-     *   7  BEL (bell)                      39  '         71  G        103  g
-     *   8  BS  (backspace)                 40  (         72  H        104  h
-     *   9  TAB (horizontal tab)            41  )         73  I        105  i
-     *  10  LF  (NL line feed, new line)    42  *         74  J        106  j
-     *  11  VT  (vertical tab)              43  +         75  K        107  k
-     *  12  FF  (NP form feed, new page)    44  ,         76  L        108  l
-     *  13  CR  (carriage return)           45  -         77  M        109  m
-     *  14  SO  (shift out)                 46  .         78  N        110  n
-     *  15  SI  (shift in)                  47  /         79  O        111  o
-     *  16  DLE (data link escape)          48  0         80  P        112  p
-     *  17  DC1 (device control 1)          49  1         81  Q        113  q
-     *  18  DC2 (device control 2)          50  2         82  R        114  r
-     *  19  DC3 (device control 3)          51  3         83  S        115  s
-     *  20  DC4 (device control 4)          52  4         84  T        116  t
-     *  21  NAK (negative acknowledge)      53  5         85  U        117  u
-     *  22  SYN (synchronous idle)          54  6         86  V        118  v
-     *  23  ETB (end of trans. block)       55  7         87  W        119  w
-     *  24  CAN (cancel)                    56  8         88  X        120  x
-     *  25  EM  (end of medium)             57  9         89  Y        121  y
-     *  26  SUB (substitute)                58  :         90  Z        122  z
-     *  27  ESC (escape)                    59  ;         91  [        123  {
-     *  28  FS  (file separator)            60  <         92  \        124  |
-     *  29  GS  (group separator)           61  =         93  ]        125  }
-     *  30  RS  (record separator)          62  >         94  ^        126  ~
-     *  31  US  (unit separator)            63  ?         95  _        127  DEL
-     *
+     * ASCII TABLE (for reference)
      * using ordinal values as keys maybe? later?: ATG 658471, TAG 846571, TAA 846565, TGA 847165 (changed use of hashmaps to arraylist for now)
-     * chars of interest: (65, A) (84, T) (67, C) (71, G)
+     * chars of interest and their ASCII values: (65, A) (84, T) (67, C) (71, G) (62, >)
      */
-    public static void read(File file) {
+    public void readAndFindORFs() {
+        readAndFindORFs(filename_RELATIVE_TEMP);
+    }
 
+    public void readAndFindORFs(String filename) {
         long startTime = System.nanoTime();
 
         int[] last = new int[3];
@@ -79,19 +59,17 @@ public class ORFFinder {
         Sequence currentSequence = null;
         boolean isStopCodon;
 
-        try (BufferedReader reader = Files.newBufferedReader(Paths.get(String.valueOf(file)))) {
-            int c;
+        int c;
+
+        try (BufferedReader reader = Files.newBufferedReader(
+                Path.of(filename))) {
+
             while ((c = reader.read()) != -1) {
-
-                // header 62 = >
-                // assume all files start with this
-
-                // chars of interest: (65, A) (84, T) (67, C) (71)
-
+                // iterate over character (int) in the file...
                 switch (c) {
-                    case (62):  // >
+                    case (62):  // ASCII 62 == >
                         double dnaStartTime = System.nanoTime();
-                        String header = reader.readLine(); // catch header and skip this header TODO confirm? CONFIRMED!
+                        String header = reader.readLine(); // Save the header
                         currentSequenceID++;
                         currentPos = 0;
                         if (currentSequence != null) {
@@ -109,12 +87,13 @@ public class ORFFinder {
                             System.out.println(header);
                         }
                         currentSequence = new Sequence(currentSequenceID);
-                        System.out.println("created " + currentSequenceID);
+                        sequences.add(currentSequence);
                         break;
-                    case (65):  // A
-                    case (67):  // C
-                    case (71):  // G
-                    case (84):  // T
+                    case (65):  // ASCII 65 == A
+                    case (67):  // ASCII 67 == C
+                    case (71):  // ASCII 71 == G
+                    case (84):  // ASCII 84 == T            // TODO enhancement add 'U' ?
+                        currentSequence.calculateLength(1);
                         currentPos++;
                         last[0] = last[1];
                         last[1] = last[2];
@@ -126,17 +105,19 @@ public class ORFFinder {
                                 // System.out.println("is stop codon true");  // TODO DEBUGPRINT
                                 isStopCodon = true;
                                 break;
-                            case "658471":  // ATG replaces // if (last[0] == 65 && last[1] == 84 && last[2] == 71) {}
+                            case "658471":  // ATG
                                 trackedATGs++;
                                 // continue to default
-                                ORFBaby orfBaby = new ORFBaby(currentPos, currentSequence);
-                                currentSequence.addORFBaby(orfBaby);
+                                ORF orf = new ORF(currentPos, currentSequence);
+                                assert currentSequence != null;
+                                currentSequence.addNewORF(orf);
                             default:
                                 // System.out.println("is stop codon false");   // TODO DEBUGPRINT
                                 isStopCodon = false;
                                 break;
                         }
-                        currentSequence.feedActiveORFBabies(isStopCodon);
+                        assert currentSequence != null;
+                        currentSequence.feedActiveORFs(c, isStopCodon);
 
                         break;
                     default:
@@ -165,6 +146,14 @@ public class ORFFinder {
         System.out.println("Duration : " + seconds + " seconds");
     }
 
+    public void seeDNA() {
+        for (Sequence sequence : sequences) {
+            for (ORF orf : sequence) {
+                System.out.println(orf);
+                System.out.println(orf.getDnaSequence());
+            }
+        }
+    }
 
     public void testReadAndCountSpeed(int amount) {
         for (int i = 0; i < amount + 1; i++) {
@@ -176,7 +165,14 @@ public class ORFFinder {
             System.out.println("Duration : " + duration / 1000000 + " milliseconds");
         }
     }
-
+    public List<Integer> getInfoForVisualisation(){
+        List<Integer> num = new ArrayList<>();
+        for (Sequence sequence : sequences) {
+            int length = sequence.getLengthOfsequence();
+            num.add(length);
+        }
+        return num;
+    }
     public long readandcount(int counts) {
 
         long countable = 0;
@@ -193,7 +189,7 @@ public class ORFFinder {
             e.printStackTrace();
         }
 
-
+        System.out.println(countable);
         return countable;
 
     }
